kubernetes/coach-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: coach-mysql
  name: coach-mysql
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: "3306"
    nodePort: 30806
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    service: coach-mysql
  sessionAffinity: None
  type: NodePort
