kubernetes/coach-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: coach-web
  name: coach-web
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: "80"
    nodePort: 31880
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    service: coach-web
  sessionAffinity: None
  type: NodePort
