kubernetes/coach-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coach-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: coachmatepro.natujenge.ke
    http:
      paths:
      - backend:
          service:
            name: coach-web
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: coach-api
            port:
              number: 10290
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - coachmatepro.natujenge.ke
    secretName: coach-ssl
